Closed Bug 402000 Opened 18 years ago Closed 18 years ago

imgContainer's ContainerLoader.mContainer should be a nsCOMPtr

Categories

(Core :: Graphics: ImageLib, defect)

x86
All
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9beta1

People

(Reporter: Dolske, Assigned: Dolske)

References

Details

Attachments

(1 file)

I cut'n'paste this code for use elsewhere, and ended up crashing because of it. It doesn't seem to be crashing for how imgContainer uses it, so I'm not sure what's up with that.
Attachment #286940 - Flags: review?(pavlov)
Comment on attachment 286940 [details] [diff] [review] Patch for review, v.1 this could lead to nasty crashes. we should land this for m9
Attachment #286940 - Flags: review?(pavlov)
Attachment #286940 - Flags: review+
Attachment #286940 - Flags: approvalM9?
Flags: blocking1.9?
Flags: blocking1.9? → blocking1.9+
This blocks beta so no need for approval to land.
(In reply to comment #2) > This blocks beta so no need for approval to land. Actually, it doesn't block the beta right now. dolske set the TM when he filed it (instead of one of the end-game drivers). Now, the end-game drivers may wish for it to be a beta blocker...
Attachment #286940 - Flags: approvalM9? → approvalM9+
Checking in modules/libpr0n/src/imgContainer.cpp; /cvsroot/mozilla/modules/libpr0n/src/imgContainer.cpp,v <-- imgContainer.cpp new revision: 1.59; previous revision: 1.58
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Justin: QA could use some help as to how to verify this bug. Thanks.
I'm not sure it's really possible to externally verify this, and it's probably an obvious/simple enough change that it's not worth the effort to do so...
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: