Bug 402000 - imgContainer's ContainerLoader.mContainer should be a nsCOMPtr. r=pavlov a1.9=pavlov aM9=dsicore